bugfixes, smooth collapse

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -7,23 +7,20 @@
 }
 
 #content {
-    -webkit-transition: width 0.3s ease;
-    -moz-transition: width 0.3s ease;
-    -o-transition: width 0.3s ease;
-    transition: width 0.3s ease;
+  -webkit-transition: margin 0.3s ease;
+  -moz-transition: margin 0.3s ease;
+  -o-transition: margin 0.3s ease;
+  transition: margin 0.3s ease;
+    
 }
 #sidebar {
-    -webkit-transition: margin 0.3s ease;
-    -moz-transition: margin 0.3s ease;
-    -o-transition: margin 0.3s ease;
-    transition: margin 0.3s ease;
-    height: 100vh;
-    position:absolute;
-    left:0;
-    width:17rem;
-    height:100vh;
-    margin: 0;
-    padding: 0;
+  height: 100vh;
+  position:absolute;
+  left:0;
+  width:17rem;
+  height:100vh;
+  margin: 0;
+  padding: 0;
 }
 
 #sidebar nav{
